--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
         Sleepiness (1-10 scale)
         Boredom (1-10 scale)
         Age   -->
-    <div id='wrapper'>
-        <h2 id='age'>age:</h2>
+        <h2>age:</h2>
         <div id='stats'>
             <h4>hunger:</h4>
             <h4>sleepiness:</h4>
             <h4>boredom:</h4>
         </div>
-    </div>
 <!-- Add buttons to the screen to feed your pet, turn off the lights, and play with your pet. -->
 
 </body>
